--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,15 @@
 /app/assets/builds/*
 !/app/assets/builds/.keep
 
-# Node
+# Node (root level - should not exist)
 /node_modules
+/package-lock.json
 /yarn-error.log
+
+# Frontend
+/frontend/node_modules
+/frontend/dist
+/frontend/.env.local
 
 # IDE
 .idea/
